fixed some layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@
 
 
 body {
-  
+  overflow-x: hidden;
   transition-property: opacity, transform, filter;
   transition-timing-function: ease-in-out;
   transition-duration: 430ms;
